@@ -7,6 +7,11 @@
 %     xdvi example-1     # or your dvi viewer here
 %
 
+%%
+%% For learning LilyPond, please read the tutorial, included in the
+%% user-manual.
+%% 
+
 \score { 
   \context Voice \notes\relative c {
     c' d e f g a b c
